--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
             <p class="cd-headline loading-bar">
               <span class="cd-words-wrapper">
                 <b class="is-visible">Full Stack Software Developer</b>
-                <b>Final Year Cse Student</b>
+                <b>Data Engineer</b>
                 <b>ML Enthusiast</b>
               </span>
             </p>
@@ -95,13 +95,12 @@
             <p>
               Hi 👋, I'm Devyansh Sehgal, A passionate full-stack developer from
               India. Being a computer science engineering student at Shiv Nadar
-              Univerisity, Delhi-NCR, I have hands-on experience with computer
-              programming fundamentals, data analysis and software development.
-              I recently built
-              <a href="https://vgive-ui.herokuapp.com/" target="_blank">vGive</a
-              >- A Donor/charity management fundraising platform (Los Altos,
-              California). 👯 I’m looking to collaborate on intersting full
-              stack web dev projects. 💬 Ask me about React, Node, SQL, AWS,
+              Univerisity, Delhi-NCR, I have hands-on experience with data
+              engineering, data analysis and software development. I recently
+              built an  <span style="font-weight:bold">app for metadata management and data pipeline configuration</span>
+              with Azure cloud integration, and Single Sign-On (SSO) for <span style="font-weight:bold">KPMG India.</span> <br>➔ Developed an AI ChatGPT-based chatbot and resume
+              evaluation system to optimize internal tasks, boosting efficiency
+              and accuracy at KPMG.<br>💬 Ask me about React, Node, SQL, AWS,
               Docker, AI and ML.
             </p>
             <button>
@@ -185,20 +184,21 @@
               </div>
               <div class="timeline_wrapper">
                 <div class="item">
+                  <p>Gurugram, Feb 2023</p>
+                  <p class="center">KPMG India</p>
+                  <p>Data Engineering Intern</p>
+                </div>
+                <div class="item">
                   <p>California, Feb-2022</p>
                   <p class="center">vGive Inc.</p>
                   <p>FullStack Software Developer</p>
                 </div>
                 <div class="item">
-                  <p>Delhi, Dec-2021</p>
+                  <p>Delhi, Aug-2022</p>
                   <p class="center">Intel Corporation</p>
                   <p>Technical Consultant - (AI & ML)</p>
                 </div>
-                <div class="item">
-                  <p>Delhi, July-2021</p>
-                  <p class="center">MyEra Group</p>
-                  <p>FrontEnd Developement Intern</p>
-                </div>
+                
               </div>
             </div>
           </div>
@@ -290,8 +290,8 @@
               <div class="slide">
                 <h2>Sentiment analysis webapp</h2>
                 <p>
-                  ➔ An NLP model that takes customer product reviews as input, and
-                  classifies reviews into positive/negative/neutral by
+                  ➔ An NLP model that takes customer product reviews as input,
+                  and classifies reviews into positive/negative/neutral by
                   performing sentiment analysis using AWS Sagemaker and Amazon
                   Athena
                 </p>
@@ -403,11 +403,11 @@
       <section class="partners">
         <div class="partner_text">Work Experience / Internships</div>
         <div class="brands_wrapper">
-          <a href="https://vgive-ui.herokuapp.com/" target="_blank"
+          <a href="https://kpmg.com/in/en/home.html" target="_blank"
             ><img
               style="height: 80px; width: min-content"
-              src="https://media-exp1.licdn.com/dms/image/C560BAQHXqeEcXPVxaA/company-logo_200_200/0/1649145126998?e=1675900800&v=beta&t=gQ1fE0S3GpIppvPReEiyhPVT7uXdkbIYjVc59I2WNUs"
-              alt="vGive Technologies"
+              src="./images/images/kpmg.png"
+              alt="KPMG India"
           /></a>
           <a href="https://bootcamp.aiforyouth.org/" target="_blank"
             ><img
